Alignment fix for print radion button options
Former-commit-id: 21c764fcc5bd89b994ef5f026f5b1b661611a7ca

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -763,6 +763,15 @@ table {
 
 .printContent { display: none; }
 .assessmentOtherInfoHeader { display: none;}
+
+.printFooterPopover {
+  label {
+    display: inline-block;
+  }
+  input { 
+    margin: 0 5px 0 0; 
+    }
+}
       
 
     
